--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <h5 class="pls">*ear the musik until end <br> click the disc icon</h5>
   </div>
 
+    <footer>
+     <small class="block">&copy; 2025 digital envelope. All Rights Reserved </small>
+            <small class="block">Design by <a href="https://www.instagram.com/kamuhakari/">@kamuhakari</a>.</small>
+  </footer>
+
   <div class="audio-container">
     <audio id="song" autoplay loop>
       <source src="nplivewithu.mp3" type="audio/mp3">
@@ -112,6 +117,22 @@
     align-items: center;
     line-height: 0;
 
+}
+    footer {
+    padding: 3rem;
+    background-color: var(--pink);
+    color: rgb(86, 82, 82);
+    text-align:center;
+}
+
+footer a{
+    text-decoration: none;
+    color:black;
+    font-weight: bold;
+}
+
+footer a:hover{
+    color: white;
 }
 
 @keyframes rotating {
