--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
     <footer>
-     <small class="block">&copy; 2025 digital envelope. All Rights Reserved </small>
+     <small class="block">&copy; 2025 greeting card. All Rights Reserved </small>
             <small class="block">Design by <a href="https://www.instagram.com/kamuhakari/">@kamuhakari</a>.</small>
   </footer>
 
